--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
 </head>
-<body>
+<body class="blood">
   <div class="container">
     <header class="header">
       <a href="/" class="logo-link">
@@ -31,7 +31,7 @@
             <a href="premier.html" class="nav-menu-link">премьера</a>
           </li>
         </ul>
-      </nav>
+      </nav> 
     </header>
     <div class="film">
       <div class="film-text">
@@ -42,9 +42,20 @@
         </p> 
       </div>
       <!-- /.film-text -->
+      <div class="button-group">
+        <button class="button button-primary">
+          <img width="15" height="15" src="img/play.svg" alt="icon: play" class="button-icon">
+          <span class="button-text">смотреть трейлер</span>
+        </button>
+        <a href="trailer.html" class="button button-link">
+          <img width="15" height="15" src="img/ticket.svg" alt="icon: ticket" class="button-icon">
+          <span class="button-text">билеты на премьеру</span>
+        </a>
+      </div>
     </div>
     <!-- /.film -->
   </div>
   <!-- /.container -->
+  <img src="img/venom.png" alt="photo: venom" class="venom">
 </body>
 </html>
