--- a/about.html
+++ b/about.html
@@ -17,6 +17,14 @@
         <img width="46" height="71" src="img/logo.png" alt="logo: venom" class="logo-image">
       </a>
       <nav class="nav">
+        <button class="menu-button">
+          <span class="menu-button-text">меню</span>
+          <img src="img/menu.svg" alt="icon: burger menu" class="menu-button-icon">
+        </button>
+        <button class="menu-close">
+          <span class="menu-close-text">закрать</span>
+          <img src="img/arrow.svg" alt="icon: arrow right" class="menu-close-icon">
+        </button>
         <ul class="nav-menu">
           <li class="nav-menu-item">
             <a href="about.html" class="nav-menu-link">о фильме</a>
@@ -51,9 +59,11 @@
           <li class="list-item">Пегги Лу</li>
         </ul>
         <div class="trailer">
+          <a data-fancybox href ="https://www.youtube.com/watch?v=Othd8W8o3t0">
           <button class="play">
             <img src="img/play.svg" alt="icon: play" class="play-icon">
           </button>
+          </a>
         </div>
         <!-- /.trailer -->
       </div>
@@ -86,5 +96,9 @@
     <!-- /.content -->
   </div>
   <!-- /.container -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
